@@ -501,6 +501,10 @@ dojo.declare("com.nuclearunicorn.game.ui.TradeButton", com.nuclearunicorn.game.u
 			//this.game.msg("You've got " + this.game.getDisplayValueExt(titaniumAmt) + " titanium!", "notice");
 		}
 
+		//Update Trade Stats
+		this.game.stats.getStat("totalTrades").val += 1;
+		this.game.stats.getStatCurrent("totalTrades").val += 1;
+
 		return tradeRes;
 	},
 
