@@ -456,6 +456,10 @@ label:hover {
     textShadow: 1px 0px 10px Coral;
 }
 
+.statTable tr td:nth-child(2) {
+    padding-left: 20px;
+}
+
 h1 {
     font-size: 12px;
     color: Coral;
